--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,7 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=reservation
+
+POSTGRES_USER: postgres
+POSTGRES_PASSWORD: password
+POSTGRES_DB: reservation
